feat: 테스트 계층화 및 예외 처리 개선